# boxs

./: .env  README.md
agent/: .env.example  .gitignore  Cargo.toml  README.md
agent/src/: main.rs  server.rs
boxs-server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
boxs-server/migrations/: 001_users.sql  002_business.sql  003_usage.sql  004_housekeeping.sql  005_sync.sql
boxs-server/src/: config.rs  error.rs  main.rs  state.rs
boxs-server/src/auth/: email.rs  handler.rs  jwt.rs  middleware.rs  mod.rs  password.rs
boxs-server/src/data/: expense.rs  habit.rs  mod.rs  sync.rs  todo.rs
boxs-server/src/llm/: client.rs  mod.rs  prompts.rs  quota.rs
boxs-server/src/routes/: auth.rs  data.rs  health.rs  mod.rs  nlu.rs  stt.rs
boxs-server/src/stt/: mod.rs  relay.rs  xfyun.rs
docs/superpowers/plans/: 2026-06-11-boxs-master-plan.md  2026-06-11-p0-prototype.md  2026-06-13-agent-expose-http-api.md  2026-06-26-sync-backend.md  2026-06-26-sync-ios.md
docs/superpowers/specs/: 2026-06-11-native-architecture-design.md  2026-06-13-agent-expose-http-api-design.md  2026-06-26-ios-backend-sync-design.md
platform/ios/: project.yml
platform/ios/Boxs.xcodeproj/: project.pbxproj
platform/ios/Boxs.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
platform/ios/Boxs.xcodeproj/project.xcworkspace/xcuserdata/huayang.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/Boxs.xcodeproj/xcuserdata/huayang.xcuserdatad/xcschemes/: xcschememanagement.plist
platform/ios/Boxs/App/: AppDelegate.swift  BoxsApp.swift
platform/ios/Boxs/Core/Constants/: Categories.swift
platform/ios/Boxs/Core/Database/: AppDatabase.swift  ExpenseRecord.swift  HabitDefinition.swift  HabitRecord.swift  SyncCursor.swift  SyncOutbox.swift  TodoRecord.swift
platform/ios/Boxs/Core/NLU/: ConfidenceScorer.swift  LLMClient.swift  MultiIntentEngine.swift  NLUOrchestrator.swift  Preprocessor.swift  ResponseParser.swift  SentenceSplitter.swift  SingleIntentRuleEngine.swift
platform/ios/Boxs/Core/Network/: APIClient.swift  BackgroundSync.swift  DTOs.swift  Endpoints.swift  Mappers.swift  SyncEngine.swift  SyncNetworking.swift  SyncService.swift  TokenManager.swift
platform/ios/Boxs/Core/STT/: AudioRecorder.swift  STTClient.swift
platform/ios/Boxs/Core/Theme/: AppColors.swift  AppRadius.swift  AppSize.swift  AppSpacing.swift  AppTypography.swift
platform/ios/Boxs/Models/: Expense.swift  Habit.swift  NLUResult.swift  Todo.swift  User.swift
platform/ios/Boxs/Resources/: Info.plist
platform/ios/Boxs/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
platform/ios/Boxs/ViewModels/: AuthViewModel.swift  ExpenseStatsViewModel.swift  HabitViewModel.swift  HomeViewModel.swift  NLUViewModel.swift  TodoViewModel.swift
platform/ios/Boxs/Views/Components/: ActionButtonStyle.swift  AppDivider.swift  CompactListItem.swift  ConfirmSheet.swift  HalfSheet.swift  OverviewCard.swift  TagView.swift  VoiceButton.swift
platform/ios/Boxs/Views/Pages/: ExpenseStatsPage.swift  HabitCalendarPage.swift  MainPage.swift  RecordDetailPage.swift  SettingsPage.swift  TodoListPage.swift
platform/ios/BoxsTests/: SyncEngineTests.swift  SyncOutboxTests.swift
platform/ios/BoxsTests/NLU/: ConfidenceScorerTests.swift  LenientDateParsingTests.swift  MultiIntentTests.swift  PreprocessorTests.swift  RuleEngineTests.swift  SentenceSplitterTests.swift
specs/: 01-product-overview.md  02-features.md  03-architecture.md  04-nlu-design.md  05-nlu-prompts.md  06-rule-engine.md  07-confidence-and-routing.md  08-development-plan.md  12-rust-backend.md  14-ui-theme.md
