[package]
name = "boxs-agent"
version = "0.1.0"
edition = "2021"
description = "Boxs AI Agent - 本地 LLM 驱动的生活记录助手"

[dependencies]
adk-rust = { version = "1.0", features = [
    "openai",      # 通过 OpenAI 兼容 API 连接 llama.cpp
    "ollama",      # 备选：通过 Ollama 连接
    "agents",
    "runner",
    "sessions",
    "tools",
    "cli",
    "server",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
dotenvy = "0.15"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# HTTP layer for the custom POST /api/chat route. Version pinned to match the
# axum adk-rust already pulls in transitively (see `cargo tree -p axum`).
axum = "0.8"
futures = "0.3"
# `tower::ServiceBuilder` composes the per-route layers on /api/chat.
# Promoted from a dev-dependency once the chat router started using it for real.
tower = "0.5"
# `tower_http::timeout::TimeoutLayer` bounds a stuck local LLM. Preferred over
# `tower`'s timeout because the HTTP variant maps a timeout to a 408 response,
# keeping the service error `Infallible` (axum's `Router::layer` requirement).
# Already a transitive dep via adk-server; listed explicitly for direct use.
tower-http = { version = "0.6", features = ["timeout"] }
