[package]
name = "boxs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }

# WebSocket
tungstenite = "0.26"
tokio-tungstenite = "0.26"

# HTTP 客户端（LLM 调用）
reqwest = { version = "0.12", features = ["json"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT（自签发）
jsonwebtoken = "9"

# 密码哈希
argon2 = "0.5"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }

# 讯飞签名
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# 邮件
lettre = "0.11"

# 配置
dotenvy = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具
futures-util = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
hex = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
